source/stylesheets/all.css.scss
@import "colors";
@import "mixins";
$fa-font-path: "vendor/font-awesome/fonts";
@import "vendor/font-awesome/scss/font-awesome";

$perspective: 1000;
$transform-style: preserve-3d;

/* Global Reset */
* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background: black url('/images/space.jpg') no-repeat;
  background-size: 100% auto;
  font-size: small;
}

h1, h2, h3, h4, h5, h6 {
  font-size: 100%; }

h1 { margin-bottom: 1em; }
p { margin: 1em 0; }

a         { color: #00a; }
a:hover   { color: #00a; }
a:visited { color: #00a; }

body {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 16px;
  height: 100%;
  overflow: hidden;
}

body > nav {
  height: 50px;
  zindex: 10;
  background-color: white;
}

.page-nav {
  width: 100%;
  position: fixed;
  top: 1em;
  left: 0;
  text-align:center;

  a {
    margin-left: 1em;
    margin-right: 1em;
    text-decoration: none;
  }

  a i {
    font-size: 48px;
    cursor: pointer;
  }

  .left, .right {
    &.inactive {
      opacity: 0;
      a, i { cursor: default; }
    }
  }

  .left {
    float: left;
  }

  .right {
    float:right;
  }

  .center {
    margin: 0 auto;
  }
}

.container {
  min-height:100%;
  @include transform-style($transform-style);
  @include perspective($perspective);
  @include perspective-origin(50% 0);
  @include backface-visibility(hidden);
  overflow: hidden;
  //@include filter(blur(3px) brightness(0.5));

  .page-container {
    z-index: 5;
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;

    @include transform-style($transform-style);
    @include transition(all 0.3s linear);

    // 3d stuff
    &.left, &.right {
      opacity: 0;
      visibility: hidden;
      z-index: 1;
    }
    &.left {
      @include transform(translateX(-50%) rotateY(-90deg));
    }

    &.right {
      @include transform(translateX(50%) rotateY(90deg));
    }
  }

  .page, .page-back {
    z-index: 5;
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    height: 100%;
    overflow-x: hidden;
    overflow-y: auto;
    visibility: visible;

    @include transition(all 0.3s linear);
    &.flipped { opacity: 0; z-index: 4; visibility: hidden;}
  }

  .page-back.flipped {
    @include transform(rotateX(-180deg));
  }

  .page.flipped {
    @include transform(rotateX(180deg));
    visibility: hidden;
  }

  .page, .page-back {
    .post-content {
      outline: none;
      max-width: 800px;
      margin: {
        left: auto;
        right: auto;
      }
      padding: 4em 1em 2em 1em;

      figure {
        max-width: 100%;
        display: block;
        margin-left: auto;
        margin-right: auto;
        text-align: center;
        img { max-width: 100%; }
        figcaption {
          font-style: italic;
        }
      }

      .title {
        font-size: 3em;
        text-align: center;
        margin-bottom: 0.25em;
        margin-left: 0.5em;
        margin-right: 0.5em;
      }
      .subtitle {
        text-align: center;
      }
      .published-date { text-align: center; }
      .author-info { text-align: center; }
      .post-actions {
        margin-top: 1em;
        font-size: 0.8em;
        text-align: center;
      }
      .post-body {
        margin-top: 3em;
      }
    }
  }
}

.secret-button {
  position: fixed;
  bottom: 0.5em;
  right: 0.5em;
  a {
    text-decoration: none;
    i.fa {
      @include transition(all 0.15s ease-in-out);
      font-size: 32px;
      color: black;
      opacity: 0.1;
      @include filter(blur(4px));
      &:hover {
        opacity: 0.25;
        @include filter(blur(0px));
      }
    }
  }
  z-index: 1000;
}

blockquote {
  font-size: 18px;
  font-style: italic;
  margin: 0.25em 0;
  padding: 0.25em 40px;
  line-height: 1.45;
  position: relative;
}

blockquote:before {
  display: block;
  content: "\201C";
  font-size: 80px;
  position: absolute;
  left: -20px;
  top: -20px;
}

blockquote cite {
  font-size: 14px;
  display: block;
  margin-top: 5px;
}

blockquote cite:before {
  content: "\2014 \2009";
}

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (max-device-width : 600px) {
  .title {
    font-size: 2em !important;
  }

  .page i.fa {
    font-size: 2em !important;
  }
}
//@import "syntax.css";

